Integrar implementacion con sockets y el motor de batalla

--- a/SocketsInfrastructure/SocketsInfrastructure.csproj
+++ b/SocketsInfrastructure/SocketsInfrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DragonBattle.Core\DragonBattle.Core.csproj" />
+    </ItemGroup>
+
 </Project>
